--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
     display: flex;
     text-align: center;
     min-height: 100vh;
+    width: 100%;
     align-items: center;
     justify-content: center;
     color: white;
@@ -45,7 +46,9 @@
     text-transform: capitalize;
 }
 
-/* TodoForm Component */
+/* ================================================================================= */
+/*                          Todo Form                                                */
+/* ================================================================================= */
 .list-container {
     display: flex;
     flex-direction: column;
@@ -163,9 +166,7 @@ hr {
 }
 
 ::-webkit-scrollbar-track {
-    /* background: #f1f1f1; */
     background: #4e4b54;
-    /* box-shadow: inset 0 0 5px grey;  */
     border-radius: 8px;
 }
 
@@ -202,11 +203,16 @@ hr {
     margin-right: 0.75rem;
 }
 
-/* Login Component */
+/* ================================================================================= */
+/*                          Login                                                    */
+/* ================================================================================= */
 .form-container, .login-form {
     display: flex;
     flex-direction: column;
-    width: 290px;
+}
+
+.form-container {
+    width: 300px;
 }
 
 .login-h1 {
@@ -215,6 +221,7 @@ hr {
 
 .login-form {
     margin: 3rem auto 20rem auto;
+    width: 290px;
 }
 
 label {
@@ -269,13 +276,15 @@ label {
     cursor: not-allowed;
 }
 
-@media screen and (min-width: 600px) {
+/* Desktop view */
+/* @media screen and (min-width: 600px) { */
+@media screen and (min-width: 992px) {
     .form-container {
-        padding: 7rem;
+        padding: 7rem 0;
         border: 1px solid white;
         border-radius: 10px;
         margin: 0.5rem;
-        width: 300px;
+        width: 500px;
         box-shadow: 5px 10px rgb(245, 245, 245);
         align-items: center;
         justify-content: center;
@@ -307,7 +316,6 @@ label {
         margin-bottom: 0.5rem;
     }
     .todo-input {
-        /* margin-right: 3rem; */
         width: 55%;
     }
     .todo-input.search {
